# Xpider_Mark3

./: LICENSE  README.md  setup.sh
xpider_circletrack/: CMakeLists.txt
xpider_circletrack/src/: xpider_circletrack.cpp
xpider_facetrack/: CMakeLists.txt
xpider_facetrack/src/: xpider_facetrack.cpp
xpider_group/: CMakeLists.txt
xpider_group/src/: main.cpp  spideraction.cpp  spideraction.h  xpider_group.cpp
xpider_joy_control/: CMakeLists.txt
xpider_joy_control/src/: mi_joystick.c  mi_joystick.h  xpider_joy_control.c
xpiderctl/: CMakeLists.txt
xpiderctl/src/: config.h  xpiderctl.c  xpiderctl.h
